# NotionToGithubPageJekyll

./: README.md  pyproject.toml  requirements.txt  script.py
