[tool.poetry]
name = "notion-to-github-page-jekyll"
version = "0.1.0"
description = "Sync Notion pages to a GitHub Pages Jekyll site"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
attrs = "20.3.0"
beautifulsoup4 = "4.9.3"
bs4 = "0.0.1"
cached-property = "1.5.2"
certifi = "2020.12.5"
chardet = "4.0.0"
commonmark = "0.9.1"
dictdiffer = "0.8.1"
GitPython = "3.1.26"
idna = "2.10"
iniconfig = "1.1.1"
packaging = "20.9"
pluggy = "0.13.1"
py = "1.10.0"
pyparsing = "2.4.7"
python-slugify = "4.0.1"
pytz = "2021.1"
requests = "2.25.1"
soupsieve = "2.2.1"
text-unidecode = "1.3"
toml = "0.10.2"
tzlocal = "2.1"
urllib3 = "1.26.4"
notion2md = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

